Remove legacy codec interpretations and switch to custom codec implementations for representing maps that the key is not representable by a string